# softwareMechatronics

./: .gitignore  README.md  __init__.py  algorithm_dependencies.dot  algorithms-dot.md  createfilesystemscaffold.py  creategrpah.py  fill_algorithms.py  fill_backtracking.py  fill_computation_models.py  fill_data_structures.py  fill_dp.py  fill_examples.py  fill_test_utils.py  fill_tests.py  fill_utils.py  pyproject.toml  setup.py
algorithms/: __init__.py
algorithms/backtracking/: n_queens.py  sudoku_solver.py
algorithms/dp/: __init__.py  edit_distance.py  knapsack.py  (+1 more)
composites/: __init__.py
computation_models/: __init__.py  combinatory_logic.py  finite_state_machine.py  lambda_calculus.py  pushdown_automaton.py  turing_machine.py
data_structures/: __init__.py  array.py  array_binary_tree.py  avl_tree.py  graph.py  hash_table.py  linked_list.py  queue.py  stack.py  test_avl_tree.py  tree.py  union_find.py
examples/: a_star_example.py  array_binary_tree_demo.py  array_binary_tree_visual_demo.py  avl_tree_demo.py  avl_tree_visual_demo.py  dijkstra_vs_bellman.py  fibonacci_comparison.py  floyd_warshall_example.py  heap_demo.py  heap_visual_demo.py  held_karp_tsp.py  kmp_example.py  max_flow_example.py
tests/: generate_inits.py  test_a_star.py  test_algorithms.py  test_array_binary_tree.py  test_avl_tree.py  test_data_structures.py  test_floyd_warshall.py  test_kmp.py  test_max_flow.py  test_models.py  test_simulated_annealing.py  test_utils.py
utils/: __init__.py  benchmark_suite_expanded.py  benchmarks.py  bitmasking.py  memoization.py  module_check.py
(+30 files in other folders)
